--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <h1>Welcome User!</h1>
-     
-    click to <button onclick="window.location.replace('/app/user')"> See User</button>
+    click to <button onclick="window.location.replace('/api/user')"> See User</button>
 </body>
 </html>
