--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/style.css">
+    <script type="text/javascript" src="./javascripts/services.js"></script>
+
     <title>API</title>
 </head>
 <body>
-    <h1>Welcome User!</h1>
-    click to <button onclick="window.location.replace('/api/user')"> See User</button>
+    <nav class="navbar navbar-dark bg-light text-center">
+        <a class="navbar-brand" href="#">
+         <img src="./images/fb-logo.png" alt="Logo" style="width:40px;">
+       </a>
+        <h5>Login</h5>
+    </nav>
+
+  <div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-heading">
+            <h2 class="text-center">
+                <img src="./images/fb-form-logo.png" alt="Logo" style="width:80px;">
+
+            </h2>
+        </div>
+        <hr/>
+        <div class="modal-body">
+            <form action="" role="form">
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-user"></span>
+                        </span>
+                        <input type="text" class="form-control" placeholder="User Name" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-lock"></span>
+                        </span>
+                        <input type="password" class="form-control" placeholder="Password" />
+                    </div>
+                </div>
+                <div class="form-group text-center">
+                    <button type="submit" class="btn btn-info btn-lg" onclick="">Login</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 </html>
