--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="./stylesheets/style.css">
-    <script type="text/javascript" src="./javascripts/services.js"></script>
+    <script type="text/javascript" src="./javascripts/userlogInOut.js"></script>
 
     <title>API</title>
 </head>
@@ -27,13 +27,13 @@
         </div>
         <hr/>
         <div class="modal-body">
-            <form action="" role="form">
+            <form  role="form" method="get">
                 <div class="form-group">
                     <div class="input-group">
                         <span class="input-group-addon">
                         <span class="glyphicon glyphicon-user"></span>
                         </span>
-                        <input type="text" class="form-control" placeholder="User Name" />
+                        <input type="text" class="form-control" name="cred" placeholder="User Name" />
                     </div>
                 </div>
                 <div class="form-group">
@@ -41,11 +41,11 @@
                         <span class="input-group-addon">
                         <span class="glyphicon glyphicon-lock"></span>
                         </span>
-                        <input type="password" class="form-control" placeholder="Password" />
+                        <input type="password" class="form-control" name="cred" placeholder="Password" />
                     </div>
                 </div>
                 <div class="form-group text-center">
-                    <button type="submit" class="btn btn-info btn-lg" onclick="">Login</button>
+                    <button type="submit" class="btn btn-info btn-lg" onclick="login()">Login</button>
                 </div>
             </form>
         </div>
