--- a/public/user.html
+++ b/public/user.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="./stylesheets/style.css">
-
+    <script type="text/javascript" src="./javascripts/userinfo.js"></script>
+    <script type="text/javascript" src="./javascripts/userlogInOut.js"></script>
     <title>API</title>
 </head>
 <body>
@@ -14,9 +15,16 @@
         <img src="./images/fb-logo.png" alt="Logo" style="width:40px;">
       </a>      
       <form class="form-inline">
-        <h5>email@id.com</h5>
-        <button class="btn btn-danger my-2 my-sm-0" type="logout">logout</button>
+       <div class="name">
+          
+      </div>
+        <button class="btn btn-danger my-2 my-sm-0" type="logout" onclick="logout()">logout</button>
       </form>
     </nav>
+    <div class="posts">
+    <ul class="list-group list-group-flush">
+
+    </ul>  
+  </div>
 </body>
 </html>
