--- a/public/login.html
+++ b/public/login.html
@@ -6,10 +6,10 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="./stylesheets/style.css">
     <script type="text/javascript" src="./javascripts/userlogInOut.js"></script>
-
     <title>API</title>
+    
 </head>
-<body>
+<body style="background: rgb(96, 99, 98);">
     <nav class="navbar navbar-dark bg-light text-center">
         <a class="navbar-brand" href="#">
          <img src="./images/fb-logo.png" alt="Logo" style="width:40px;">
@@ -27,7 +27,7 @@
         </div>
         <hr/>
         <div class="modal-body">
-            <form  role="form" method="get">
+            <form  role="form"  onsubmit="return false">
                 <div class="form-group">
                     <div class="input-group">
                         <span class="input-group-addon">
